--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
 <link rel="canonical" href="{{ page.url | prepend: site.baseurl }}">
 <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/feed.xml" />
 
+{% seo %}
+
 {% if jekyll.environment == 'production' %}
 
 	<script>
